--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2"
   }
