Package.json of analysis folder changed

--- a/React(Analysis)/final/package.json
+++ b/React(Analysis)/final/package.json
@@ -3,25 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@popperjs/core": "^2.11.8",
     "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.6",
+    "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.7",
     "cross-env": "^7.0.3",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.460.0",
+    "reacharts": "^0.4.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.28.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webcamjs": "^1.0.26"
   },
   "scripts": {
-    "start": "cross-env PORT=9000 react-scripts start",
+    "start": "cross-env PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
