--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,10 +18,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.1",
+    "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1"
   },
   "description": ""
 }
